# LogicLoom

./: .gitignore  README.md  requirements.txt
apps/: logicloom.apk
logicloom_core/: pyproject.toml
logicloom_core/logicloom/: __init__.py  __main__.py  simplifier.py  types.py  utils.py
logicloom_ui/: __init__.py  __main__.py  app.py  html_templates.py  logicloom_client.py  main_window.py  validation.py  workers.py
